--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
   "dependencies": {
     "apsl-react-native-button": "^3.1.1",
     "dva-core": "^1.2.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "express": "^4.16.3",
+    "mongose": "^0.0.2-security",
     "navigation": "^5.0.1",
+    "node": "^10.0.0",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "0.55.3",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "1.0.0-beta5",
     "react-native-gesture-password": "^0.3.2",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.11"
+    "react-navigation": "^1.5.11",
+    "roadhog": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
