--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "mongoose": "^5.1.2",
     "mongose": "^0.0.2-security",
     "navigation": "^5.0.1",
     "node": "^10.0.0",
+    "passport": "^0.4.0",
     "prop-types": "^15.6.1",
     "qs": "^6.5.2",
     "react": "16.3.1",
